Fix the "Active Alerts" menu displaying off screen on narrow devices.

--- a/buoy.css
+++ b/buoy.css
@@ -7,3 +7,8 @@
 #wp-toolbar > ul > li#wp-admin-bar-buoy-alerts-menu {
     display: list-item; /* always show, even on narrow screens */
 }
+@media screen and (max-width: 728px) {
+    #wpadminbar #wp-admin-bar-buoy-alerts-menu {
+        position: static;
+    }
+}
